--- a/go-server/www/css/styles.css
+++ b/go-server/www/css/styles.css
@@ -7,21 +7,27 @@ body {
 
 .side-right{
     background-color: #2c2c2c;
-    width: 300px;
+    width: 330px;
     right: 0;
     height: 100%;
     border: 0px solid black;
     position: absolute;
     top: 0;
+    overflow: auto;
 }
 
 .remote-control {
     width: 200px;
-    height: 500px;
-    top: 10px;
+    height: 605px;
+    top: 0;
     position: relative;
-    left: 10px;
+    left: 0;
     border: 1px solid black;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    line-height: 0;
+    overflow: hidden;
 }
 
 .remote-button{
