--- a/go-server/www/remotes/Samsung_BN59-00940A/styles.css
+++ b/go-server/www/remotes/Samsung_BN59-00940A/styles.css
@@ -5,13 +5,26 @@
 }
 
 .Samsung_BN59-00940A .remote-body{
-    background-color: #191919;
-    width: 150px;
-    height: 460px;
-    margin-top: 5px;
-    margin-left: 5px;
+    background-color: #515257;
+    width: 155px;
+    height: 584px;
+    margin-top: 0;
+    margin-left: 0;
+    top: 10px;
+    left: 10px;
     position: relative;
     border-radius: 5px;
+    
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0e0e0e+0,515257+5,515257+5,0e0e0e+100 */
+    background: #0e0e0e; /* Old browsers */
+    background: -moz-linear-gradient(top, #0e0e0e 0%, #515257 5%, #515257 5%, #0e0e0e 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #0e0e0e 0%,#515257 5%,#515257 5%,#0e0e0e 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #0e0e0e 0%,#515257 5%,#515257 5%,#0e0e0e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0e0e0e', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-9 */
+    
+    background-size: 160px auto;
+    background-position: -3px -4px;    
+    /* background-image: url(../../images/r.png); */
 }
 
 .Samsung_BN59-00940A .remote-button{
@@ -19,114 +32,273 @@
     font-size: 8px;
     padding: 0;
     text-align: center;
+    width: 38px;
+    height: 31px;
+    background-color: #262729;
+    border: 1px solid #111113;
+    color: white;
+    background-image: none;
+    overflow: hidden;
+    font-size: 8px;
+    padding: 0;
+    text-align: center;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 2px solid #141517;
+    border-bottom: 4px solid #141517;
+    box-shadow: 1px 2px 2px rgba(0,0,0,0.3);
+}
+
+.Samsung_BN59-00940A .remote-button:hover{
+    /* background-color: black !important; */
+    box-shadow: 0 0 15px #3791ff;
 }
 
 .Samsung_BN59-00940A .remote-button.ON_BUTTON{
-    top: 5px;
-    left: 5px;
-    width: 30px;
-    height: 30px;
-    background-color: red;
-    border: 1px solid #ff7878;
+    top: 17px;
+    left: 18px;
+    width: 34px;
+    height: 34px;
+    background-color: #fd3f46;
+    border: 1px solid #a92333;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
+    border-radius: 100px;
 }
 
 .Samsung_BN59-00940A .remote-button.VOL_UP{
-    top: 200px;
-    left: 5px;
-    width: 30px;
-    height: 30px;
-    background-color: #0056dc;
-    border: 1px solid #1c3494;
+    top: 187px;
+    left: 16px;
+    width: 39px;
+    height: 44px;
+    background-color: #262729;
+    border: 1px solid #111113;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 6px solid #141517;
+    border-bottom: none;
 }
 
 .Samsung_BN59-00940A .remote-button.VOL_DOWN{
-    top: 250px;
-    left: 5px;
-    width: 30px;
-    height: 30px;
-    background-color: #0056dc;
-    border: 1px solid #1c3494;
+    top: 228px;
+    left: 16px;
+    width: 39px;
+    height: 44px;
+    background-color: #262729;
+    border: 1px solid #111113;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px 4px 4px 4px;
+    border-top: none;
+    border-bottom: 6px solid #141517;
+}
+
+.Samsung_BN59-00940A .remote-button.CHANNELUP {
+    top: 187px;
+    left: 100px;
+    width: 39px;
+    height: 44px;
+    background-color: #262729;
+    border: 1px solid #111113;
+    color: white;
+    background-image: none;
+    overflow: hidden;
+    font-size: 8px;
+    padding: 0;
+    text-align: center;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 6px solid #141517;
+    border-bottom: none;
+}
+.Samsung_BN59-00940A .remote-button.CHANNELDOWN{
+    top: 228px;
+    left: 100px;
+    width: 39px;
+    height: 44px;
+    background-color: #262729;
+    border: 1px solid #111113;
+    color: white;
+    background-image: none;
+    overflow: hidden;
+    font-size: 8px;
+    padding: 0;
+    text-align: center;
+    border-radius: 4px 4px 4px 4px;
+    border-top: none;
+    border-bottom: 6px solid #141517;
 }
 
 
 .Samsung_BN59-00940A .remote-button.UP{
-    top: 300px;
-    left: 61px;
-    width: 30px;
-    height: 30px;
-    background-color: #060606;
-    border: 1px solid #404040;
+    top: 312px;
+    left: 64px;
+    width: 24px;
+    height: 38px;
+    background-color: #262729;
+    border: 1px solid #111113;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 2px solid #141517;
+    border-bottom: 4px solid #141517;
 }
 .Samsung_BN59-00940A .remote-button.DOWN{
-    top: 360px;
-    left: 61px;
-    width: 30px;
-    height: 30px;
-    background-color: #060606;
-    border: 1px solid #404040;
+    top: 388px;
+    left: 64px;
+    width: 24px;
+    height: 38px;
+    background-color: #262729;
+    border: 1px solid #111113;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 2px solid #141517;
+    border-bottom: 4px solid #141517;
 }
 
+
 .Samsung_BN59-00940A .remote-button.RIGHT{
-    top: 340px;
-    left: 10px;
-    width: 30px;
-    height: 30px;
-    background-color: #060606;
-    border: 1px solid #404040;
+    top: 355px;
+    left: 97px;
+    width: 41px;
+    height: 29px;
+    background-color: #262729;
+    border: 1px solid #111113;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 2px solid #141517;
+    border-bottom: 4px solid #141517;
 }
 .Samsung_BN59-00940A .remote-button.LEFT{
-    top: 340px;
-    left: 100px;
-    width: 30px;
-    height: 30px;
-    background-color: #060606;
-    border: 1px solid #404040;
+    top: 355px;
+    left: 14px;
+    width: 41px;
+    height: 29px;
+    background-color: #262729;
+    border: 1px solid #111113;
     color: white;
     background-image: none;
     overflow: hidden;
     font-size: 8px;
     padding: 0;
     text-align: center;
-    border-radius: 3px;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 2px solid #141517;
+    border-bottom: 4px solid #141517;
 }
+
+.Samsung_BN59-00940A .remote-button.RETURN{
+    top: 393px;
+    left: 16px;
+}
+
+.Samsung_BN59-00940A .remote-button.EXIT{
+    top: 393px;
+    left: 98px;
+}
+
+.Samsung_BN59-00940A .remote-button.ENTER{
+    top: 354px;
+    left: 61px;
+    width: 29px;
+    height: 31px;
+    background-color: #262729;
+    border: 1px solid #111113;
+    color: white;
+    background-image: none;
+    overflow: hidden;
+    font-size: 8px;
+    padding: 0;
+    text-align: center;
+    border-radius: 4px 4px 4px 4px;
+    border-top: 2px solid #141517;
+    border-bottom: 4px solid #141517;
+}
+
+.Samsung_BN59-00940A .remote-button.KEY_0{
+    top: 151px;
+    left: 59px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_1{
+    top: 58px;
+    left: 16px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_2{
+    top: 58px;
+    left: 59px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_3{
+    top: 58px;
+    left: 101px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_4{
+    top: 89px;
+    left: 16px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_5{
+    top: 89px;
+    left: 59px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_6{
+    top: 89px;
+    left: 101px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_7{
+    top: 120px;
+    left: 16px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_8{
+    top: 120px;
+    left: 59px;
+    height: 27px;
+    font-size: 19px;
+}
+.Samsung_BN59-00940A .remote-button.KEY_9{
+    top: 120px;
+    left: 101px;
+    height: 27px;
+    font-size: 19px;
+}
+
+
